WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
222663
REGRESSION (
r273154
): Speedometer 2 is 1-2% regressed on iOS
https://bugs.webkit.org/show_bug.cgi?id=222663
Summary
REGRESSION (r273154): Speedometer 2 is 1-2% regressed on iOS
Aditya Keerthi
Reported
2021-03-03 10:29:45 PST
A 1-2% Speedometer 2 regression was observed after enabling the iOS Form Control Refresh.
Attachments
Patch
(16.21 KB, patch)
2021-03-03 10:47 PST
,
Aditya Keerthi
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Aditya Keerthi
Comment 1
2021-03-03 10:30:25 PST
<
rdar://problem/74715929
>
Aditya Keerthi
Comment 2
2021-03-03 10:47:01 PST
Created
attachment 422115
[details]
Patch
EWS
Comment 3
2021-03-03 14:05:01 PST
Committed
r273839
: <
https://commits.webkit.org/r273839
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 422115
[details]
.
Antti Koivisto
Comment 4
2021-03-03 21:53:35 PST
Comment on
attachment 422115
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=422115&action=review
> Source/WebCore/style/UserAgentStyle.cpp:230 > - if (!formControlsIOSStyleSheet && element.document().settings().iOSFormControlRefreshEnabled()) { > + if (!formControlsIOSStyleSheet && !element.document().settings().iOSFormControlRefreshEnabled()) {
Maybe call it legacyFormControlsIOSStyleSheet?
Ryosuke Niwa
Comment 5
2021-03-03 22:29:25 PST
(In reply to Antti Koivisto from
comment #4
)
> Comment on
attachment 422115
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=422115&action=review
> > > Source/WebCore/style/UserAgentStyle.cpp:230 > > - if (!formControlsIOSStyleSheet && element.document().settings().iOSFormControlRefreshEnabled()) { > > + if (!formControlsIOSStyleSheet && !element.document().settings().iOSFormControlRefreshEnabled()) { > > Maybe call it legacyFormControlsIOSStyleSheet?
Yeah, that would be a good idea.
Aditya Keerthi
Comment 6
2021-03-04 09:15:32 PST
(In reply to Antti Koivisto from
comment #4
)
> Comment on
attachment 422115
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=422115&action=review
> > > Source/WebCore/style/UserAgentStyle.cpp:230 > > - if (!formControlsIOSStyleSheet && element.document().settings().iOSFormControlRefreshEnabled()) { > > + if (!formControlsIOSStyleSheet && !element.document().settings().iOSFormControlRefreshEnabled()) { > > Maybe call it legacyFormControlsIOSStyleSheet?
Followup patch here:
https://bugs.webkit.org/show_bug.cgi?id=222741
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug